# embed

./: CMakeLists.txt  FindEmbed.cmake  LICENSE.md  README.md  embed.h  example.cc  example_include.c  example_include.cc  shader.frag.glsl  shader.vtx.glsl
